<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snackit.android.SnackWeek"
    android:background="#ebeded">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/relativeLayout"
        android:background="@drawable/untere_leiste"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/btn_back"
            android:background="@drawable/btn_back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="25dp" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView15"
            android:background="@drawable/mainmenu_line"
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/activity_btn_profil"
            android:id="@+id/textView10"
            android:textColor="#121212"
            android:layout_alignBottom="@+id/btn_back"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout_profil"
        android:layout_below="@+id/relativeLayout"
        android:background="@drawable/backgroundzutat">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView14"
                android:background="@drawable/vorlieben_info"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_nein_heading"
                android:id="@+id/textView21"
                android:layout_below="@+id/relativeLayout2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:layout_marginBottom="15dp"
                android:textSize="18dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/l_lactose">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/btn_lactose"
                    android:background="@drawable/btn_empty"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_nein_lactose"
                    android:textColor="#000000"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/l_nuss">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/btn_nuss"
                    android:background="@drawable/btn_empty"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_nein_nuss"
                    android:id="@+id/textView25"
                    android:textColor="#000000"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="17dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/l_vegetarisch">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/btn_vegetarisch"
                    android:background="@drawable/btn_empty"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_nein_vegetarisch"
                    android:id="@+id/textView24"
                    android:textColor="#000000"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="17dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/l_vegan">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/btn_vegan"
                    android:background="@drawable/btn_empty"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_nein_vegan"
                    android:id="@+id/textView23"
                    android:textColor="#000000"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
